{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 12,
  "lineage": "9f314b5d-482b-61c8-ec96-96208356c297",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "kubernetes_Servers",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b44050b2d893d5f7",
            "arn": "arn:aws:ec2:ap-south-1:185767330333:instance/i-034ff10bc8cebf179",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-034ff10bc8cebf179",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "devops",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c312c4074b212a41",
            "private_dns": "ip-172-0-0-15.ap-south-1.compute.internal",
            "private_ip": "172.0.0.15",
            "public_ip": "15.206.67.72",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-00562ee0c969f6fef",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-09e988aa418a6ff1b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b7516cceb5c4b06d",
            "tags": {
              "Name": "Kubernetes_Servers",
              "Type": "Kubernetes_Master"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09e988aa418a6ff1b"
            ]
          },
          "dependencies": [
            "aws_security_group.kubernetes_sg",
            "aws_subnet.kubernetes_subnets",
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "kubernetes_Workers",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b44050b2d893d5f7",
            "arn": "arn:aws:ec2:ap-south-1:185767330333:instance/i-0daa605a6bbf61c7f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0daa605a6bbf61c7f",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0feb5870a24deed8f",
            "private_dns": "ip-172-0-0-118.ap-south-1.compute.internal",
            "private_ip": "172.0.0.118",
            "public_ip": "13.232.197.93",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0d8b09fde78c40c16",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-09e988aa418a6ff1b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b7516cceb5c4b06d",
            "tags": {
              "Name": "Kubernetes_Servers",
              "Type": "Kubernetes_Worker"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09e988aa418a6ff1b"
            ]
          },
          "dependencies": [
            "aws_security_group.kubernetes_sg",
            "aws_subnet.kubernetes_subnets",
            "aws_vpc.kubernetes"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b44050b2d893d5f7",
            "arn": "arn:aws:ec2:ap-south-1:185767330333:instance/i-053735c10804143b7",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-053735c10804143b7",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cac9fcee6aaf5304",
            "private_dns": "ip-172-0-0-134.ap-south-1.compute.internal",
            "private_ip": "172.0.0.134",
            "public_ip": "35.154.193.0",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-025d2cf404d4f5314",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-09e988aa418a6ff1b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-025bba05474162fb4",
            "tags": {
              "Name": "Kubernetes_Servers",
              "Type": "Kubernetes_Worker"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09e988aa418a6ff1b"
            ]
          },
          "dependencies": [
            "aws_security_group.kubernetes_sg",
            "aws_subnet.kubernetes_subnets",
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "kubernetes_vpc_igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0a11a3ee9f226ac3f",
            "owner_id": "185767330333",
            "tags": {
              "Name": "kubernetes_vpc_igw"
            },
            "vpc_id": "vpc-0b4703317c8fd542b"
          },
          "dependencies": [
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "kubernetes_public_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-038f760b48b44a03f",
            "owner_id": "185767330333",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a11a3ee9f226ac3f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kubernetes_vpc_public_rt"
            },
            "vpc_id": "vpc-0b4703317c8fd542b"
          },
          "dependencies": [
            "aws_internet_gateway.kubernetes_vpc_igw",
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_sub_association",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b81ed5ccd04fd9d6",
            "route_table_id": "rtb-038f760b48b44a03f",
            "subnet_id": "subnet-0b7516cceb5c4b06d"
          },
          "dependencies": [
            "aws_internet_gateway.kubernetes_vpc_igw",
            "aws_route_table.kubernetes_public_rt",
            "aws_subnet.kubernetes_subnets",
            "aws_vpc.kubernetes"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036d7be9f3308e473",
            "route_table_id": "rtb-038f760b48b44a03f",
            "subnet_id": "subnet-025bba05474162fb4"
          },
          "dependencies": [
            "aws_internet_gateway.kubernetes_vpc_igw",
            "aws_route_table.kubernetes_public_rt",
            "aws_subnet.kubernetes_subnets",
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kubernetes_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:185767330333:security-group/sg-09e988aa418a6ff1b",
            "description": "Allow All Ports All Protocals",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09e988aa418a6ff1b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Allow_All_Ports",
            "name_prefix": null,
            "owner_id": "185767330333",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0b4703317c8fd542b"
          },
          "dependencies": [
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kubernetes_subnets",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:185767330333:subnet/subnet-0b7516cceb5c4b06d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.0.0.0/25",
            "id": "subnet-0b7516cceb5c4b06d",
            "map_public_ip_on_launch": true,
            "owner_id": "185767330333",
            "tags": {
              "Name": "kubernetes_subnets_1"
            },
            "vpc_id": "vpc-0b4703317c8fd542b"
          },
          "dependencies": [
            "aws_vpc.kubernetes"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:185767330333:subnet/subnet-025bba05474162fb4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.0.0.128/25",
            "id": "subnet-025bba05474162fb4",
            "map_public_ip_on_launch": true,
            "owner_id": "185767330333",
            "tags": {
              "Name": "kubernetes_subnets_2"
            },
            "vpc_id": "vpc-0b4703317c8fd542b"
          },
          "dependencies": [
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kubernetes",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:185767330333:vpc/vpc-0b4703317c8fd542b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.0.0.0/24",
            "default_network_acl_id": "acl-09133c6af990ae630",
            "default_route_table_id": "rtb-04f5a010bf48cb51c",
            "default_security_group_id": "sg-01924a3a412cff8db",
            "dhcp_options_id": "dopt-0bc83b60",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0b4703317c8fd542b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04f5a010bf48cb51c",
            "owner_id": "185767330333",
            "tags": {
              "Name": "kubernetes"
            }
          }
        }
      ]
    }
  ]
}